🚨 fix: add alignment to formulario component

--- a/frontend/pratiler-frontend/src/assets/css/LoginCadastro/Formulario.module.css
+++ b/frontend/pratiler-frontend/src/assets/css/LoginCadastro/Formulario.module.css
@@ -44,6 +44,7 @@
 
 .formulario {
   display: flex;
+  align-items: center;
   flex-direction: column;
 }
 
